--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,2 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
+
+body {
+  font-family: "Oswald", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 17px;
+}
+
 @import "pages/index.scss";
 @import "pages/product.scss";
