--- a/views/index.pug
+++ b/views/index.pug
@@ -10,12 +10,28 @@ block eod
 
 block content
   main
-    div Write your content here
-    form(method="POST" action="/product")
-      div
-        span ProxyCrawl Token
-        input(name="token")
-      div
-        span ProxyCrawl url (Example url: https://www.amazon.com/Philips-Norelco-AT830-46-Frustration/dp/B00JITDVD2 )
-        input(name="url")
-      input(type="submit")
+    header
+      form(method="POST" id="crawlForm")
+
+        div(class="container")
+          div(class="section")
+            label(class='label')  ProxyCrawl (Token):
+            input(name="token" type="text" class="token inputField" placeholder="Token")
+            
+          div(class="section")
+            label(class='label')  ProxyCrawl (URL): 
+            //- (Example url: https://www.amazon.com/Philips-Norelco-AT830-46-Frustration/dp/B00JITDVD2 )
+            input(name="url" type="url" class="url inputField" placeholder="Url")
+
+          div(class="section")
+            <div class="loader"></div>
+            input(type="submit" class="submitBtn")
+
+    div(class="product")
+      div(class="prod-img")
+        img(src="")
+      div(class="prod-details")
+        h2(class="title")
+        h3(class="sub-title")
+        p(class="price font-weight-600")
+        p(class="desc mt-2")
